manifests/administration-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: administration
  namespace: virtualyou
spec:
  replicas: 1
  selector:
    matchLabels:
      app: administration
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: administration
    spec:
      containers:
        - name: administration
          image: dlwhitehurst/administration:0.1.1
          imagePullPolicy: Always
