manifests/financial-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: financial
  namespace: virtualyou
spec:
  replicas: 1
  selector:
    matchLabels:
      app: financial
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: financial
    spec:
      containers:
        - name: financial
          image: docker.virtualyou.info/financial:0.1.1
