manifests/medical-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: medical
  namespace: virtualyou
spec:
  replicas: 1
  selector:
    matchLabels:
      app: medical
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: medical
    spec:
      containers:
        - name: medical
          image: docker.virtualyou.info/medical:0.1.1
