manifests/personal-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: personal
  namespace: virtualyou
spec:
  replicas: 1
  selector:
    matchLabels:
      app: personal
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: personal
    spec:
      containers:
        - name: personal
          image: docker.virtualyou.info/personal:0.1.1
