manifests/userauth-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: userauth
  namespace: virtualyou
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userauth
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: userauth
    spec:
      containers:
        - name: userauth
          image: dlwhitehurst/userauth:0.1.1
          imagePullPolicy: Always
