manifests/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.org/client-max-body-size: "50m"
  name: app-ingress
  namespace: virtualyou
spec:
  ingressClassName: nginx
  rules:
    - host: app.virtualyou.info
      http:
        paths:
          - backend:
              service:
                name: app 
                port:
                  number: 3000 
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - app.virtualyou.info
      secretName: app-tls-prod
