manifests/personal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.org/client-max-body-size: "50m"
  name: personal-ingress
  namespace: virtualyou
spec:
  ingressClassName: nginx
  rules:
    - host: personal.virtualyou.info
      http:
        paths:
          - backend:
              service:
                name: personal
                port:
                  number: 3002
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - personal.virtualyou.info
      secretName: personal-tls-prod
